--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>DevClub - Convert Money</title>
 </head>
-
 <body>
-
+    <img src="./assets/logo.gif" alt="logo-devclub-convert-money">
 </body>
 
 </html>
