--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
 </head>
 <body>
     <img src="./assets/logo.gif" alt="logo-devclub-convert-money">
+
+    <main>
+        <label for="">
+            Converter <b>de</b>
+            <select name="" id="">
+                <option value="">R$ Real Brasileiro</option>
+            </select>
+        </label>
+
+        <label for="">
+            Converter <b>para</b>
+            <select name="" id="">
+                <option value="">US$ Dólar Americano</option>
+                <option value="">€ Euro</option>
+            </select>
+        </label>
+    </main>
 </body>
 
 </html>
