--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
                 <option value="">€ Euro</option>
             </select>
         </label>
+
+        <label for="">
+            Valor
+            <input placeholder="R$ 10.000,00">
+        </label>
+
+        <button>Converter</button>
     </main>
 </body>
 
