--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
         </label>
 
         <button>Converter</button>
+
+        <section>
+            <div>
+                <img src="./assets/real.png" alt="logo-moeda-a-converter">
+                <p>Real</p>
+                <p>R$ 0,00</p>
+            </div>
+
+            <div>
+                <img src="./assets/dolar.png" alt="logo-moeda-convertida">
+                <p>Dólar</p>
+                <p>US$ 0.0</p>
+            </div>
+        </section>
     </main>
 </body>
 
