--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 <p>R$ 0,00</p>
             </div>
 
+            <img src="./assets/arrow.png" alt="seta">
+            
             <div>
                 <img src="./assets/dolar.png" alt="logo-moeda-convertida">
                 <p>Dólar</p>
