--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>DevClub - Convert Money</title>
 </head>
 <body>
@@ -43,7 +44,7 @@
             </div>
 
             <img src="./assets/arrow.png" alt="seta">
-            
+
             <div>
                 <img src="./assets/dolar.png" alt="logo-moeda-convertida">
                 <p>Dólar</p>
