--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>DevClub - Convert Money</title>
 </head>
 <body>
-    <img src="./assets/logo.gif" alt="logo-devclub-convert-money">
+    <img class="logo" src="./assets/logo.gif" alt="logo-devclub-convert-money">
 
     <main>
         <label for="">
