--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         <button>Converter</button>
 
         <section>
-            <div>
+            <div class="curency-box">
                 <img src="./assets/real.png" alt="logo-moeda-a-converter">
                 <p>Real</p>
                 <p>R$ 0,00</p>
             </div>
 
-            <img src="./assets/arrow.png" alt="seta">
+            <img class="arrow-img" src="./assets/arrow.png" alt="seta">
 
-            <div>
+            <div class="curency-box">
                 <img src="./assets/dolar.png" alt="logo-moeda-convertida">
                 <p>Dólar</p>
                 <p>US$ 0.0</p>
