--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
         <section>
             <div class="curency-box">
                 <img src="./assets/real.png" alt="logo-moeda-a-converter">
-                <p>Real</p>
-                <p>R$ 0,00</p>
+                <p class="currency">Real</p>
+                <p class="currency-value">R$ 0,00</p>
             </div>
 
             <img class="arrow-img" src="./assets/arrow.png" alt="seta">
 
             <div class="curency-box">
                 <img src="./assets/dolar.png" alt="logo-moeda-convertida">
-                <p>Dólar</p>
-                <p>US$ 0.0</p>
+                <p class="currency">Dólar</p>
+                <p class="currency-value">US$ 0.0</p>
             </div>
         </section>
     </main>
