--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button>Converter</button>
 
         <section>
-            <div class="curency-box">
+            <div class="currency-box">
                 <img src="./assets/real.png" alt="logo-moeda-a-converter">
                 <p class="currency">Real</p>
                 <p class="currency-value">R$ 0,00</p>
@@ -45,7 +45,7 @@
 
             <img class="arrow-img" src="./assets/arrow.png" alt="seta">
 
-            <div class="curency-box">
+            <div class="currency-box">
                 <img src="./assets/dolar.png" alt="logo-moeda-convertida">
                 <p class="currency">Dólar</p>
                 <p class="currency-value">US$ 0.0</p>
