--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <input placeholder="R$ 10.000,00">
         </label>
 
-        <button>Converter</button>
+        <button class="convert-button">Converter</button>
 
         <section>
             <div class="currency-box">
@@ -53,5 +53,6 @@
         </section>
     </main>
 </body>
+<script src="./scripts.js"></script>
 
 </html>
