--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <label for="">
             Valor
-            <input placeholder="R$ 10.000,00">
+            <input class="input-currency" placeholder="R$ 10.000,00">
         </label>
 
         <button class="convert-button">Converter</button>
