--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
     <img class="logo" src="./assets/logo.gif" alt="logo-devclub-convert-money">
 
     <main>
-        <label for="">
+        <label>
             Converter <b>de</b>
-            <select name="" id="">
-                <option value="">R$ Real Brasileiro</option>
+            <select>
+                <option>R$ Real Brasileiro</option>
             </select>
         </label>
 
-        <label for="">
+        <label>
             Converter <b>para</b>
-            <select name="" id="">
-                <option value="">US$ Dólar Americano</option>
-                <option value="">€ Euro</option>
+            <select class="currency-select">
+                <option value="dolar">US$ Dólar Americano</option>
+                <option value="euro">€ Euro</option>
             </select>
         </label>
 
-        <label for="">
+        <label>
             Valor
             <input class="input-currency" placeholder="R$ 10.000,00">
         </label>
