valores de moedas adicionados

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <title>DevClub - Convert Money</title>
 </head>
+
 <body>
     <img class="logo" src="./assets/logo.gif" alt="logo-devclub-convert-money">
 
@@ -46,8 +47,8 @@
             <img class="arrow-img" src="./assets/arrow.png" alt="seta">
 
             <div class="currency-box">
-                <img src="./assets/dolar.png" alt="logo-moeda-convertida">
-                <p class="currency">Dólar</p>
+                <img class="currency-img" src="./assets/dolar.png" alt="logo-moeda-convertida">
+                <p class="currency" id="currency-name">Dólar americano</p>
                 <p class="currency-value">US$ 0.0</p>
             </div>
         </section>
